// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxFlex renders 0 1`] = `
Array [
  .c0 {
  box-flex: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders function 1`] = `
Array [
  .c0 {
  box-flex: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders invalid theme path 1`] = `
Array [
  .c0 {
  box-flex: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders negative number 1`] = `
Array [
  .c0 {
  box-flex: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  box-flex: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-flex: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-flex: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-flex: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-flex: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-flex: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-flex: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-flex: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-flex: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  box-flex: July;
}

@media May {
  .c0 {
    box-flex: August;
  }
}

@media April {
  .c0 {
    box-flex: September;
  }
}

@media January {
  .c0 {
    box-flex: November;
  }
}

@media April {
  .c0 {
    box-flex: August;
  }
}

@media June {
  .c0 {
    box-flex: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-flex: July;
}

@media May {
  .c0 {
    box-flex: August;
  }
}

@media April {
  .c0 {
    box-flex: September;
  }
}

@media January {
  .c0 {
    box-flex: November;
  }
}

@media April {
  .c0 {
    box-flex: August;
  }
}

@media June {
  .c0 {
    box-flex: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-flex: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-flex: November;
  }
}

@media April {
  .c0 {
    box-flex: January;
  }
}

@media January {
  .c0 {
    box-flex: December;
  }
}

@media April {
  .c0 {
    box-flex: April;
  }
}

@media June {
  .c0 {
    box-flex: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-flex: November;
  }
}

@media April {
  .c0 {
    box-flex: January;
  }
}

@media January {
  .c0 {
    box-flex: December;
  }
}

@media April {
  .c0 {
    box-flex: April;
  }
}

@media June {
  .c0 {
    box-flex: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    box-flex: July;
  }
}

@media April {
  .c0 {
    box-flex: August;
  }
}

@media January {
  .c0 {
    box-flex: September;
  }
}

@media April {
  .c0 {
    box-flex: November;
  }
}

@media June {
  .c0 {
    box-flex: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-flex: July;
  }
}

@media April {
  .c0 {
    box-flex: August;
  }
}

@media January {
  .c0 {
    box-flex: September;
  }
}

@media April {
  .c0 {
    box-flex: November;
  }
}

@media June {
  .c0 {
    box-flex: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-flex: January;
  }
}

@media April {
  .c0 {
    box-flex: December;
  }
}

@media January {
  .c0 {
    box-flex: April;
  }
}

@media April {
  .c0 {
    box-flex: May;
  }
}

@media June {
  .c0 {
    box-flex: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-flex: January;
  }
}

@media April {
  .c0 {
    box-flex: December;
  }
}

@media January {
  .c0 {
    box-flex: April;
  }
}

@media April {
  .c0 {
    box-flex: May;
  }
}

@media June {
  .c0 {
    box-flex: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders postitive number 1`] = `
Array [
  .c0 {
  box-flex: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders string 1`] = `
Array [
  .c0 {
  box-flex: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlex renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`boxFlex renders valid theme path 1`] = `
Array [
  .c0 {
  box-flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
